Fix spacing bug in the navigation bar for authors #34

--- a/code/sites/paraentender.com/themes/paraum/css/style.css
+++ b/code/sites/paraentender.com/themes/paraum/css/style.css
@@ -6,7 +6,7 @@ h1.page-header {
 }
 
 body.toolbar .navbar-fixed-top {
-  top: 32px;
+  top: 30px;
   z-index: 499;
 }
 
